finished home chatbox comp

--- a/ui/src/app/app.html
+++ b/ui/src/app/app.html
@@ -1,28 +1,31 @@
-<div class="flex h-screen bg-slate-50">
-  <aside class="w-64 bg-white border-r border-gray-200 flex flex-col">
-    <header class="p-4 border-b border-gray-200 font-semibold text-lg text-gray-700">Chats</header>
-    <div class="flex-1 overflow-y-auto">
-      <ul class="divide-y divide-gray-200">
-        <li class="p-4 hover:bg-gray-50 cursor-pointer">
-          <div class="font-medium">John Doe</div>
-          <div class="text-sm text-gray-500 truncate">Hey, how are you?</div>
-        </li>
-        <li class="p-4 hover:bg-gray-50 cursor-pointer">
-          <div class="font-medium">Support</div>
-          <div class="text-sm text-gray-500 truncate">We’ve updated your ticket...</div>
-        </li>
-      </ul>
+<mat-sidenav-container class="h-screen">
+  <mat-sidenav
+    #sidenav
+    [fixedInViewport]="true"
+    [fixedTopGap]="0"
+    [fixedBottomGap]="0"
+    [mode]="isMobile() ? 'over' : 'side'"
+  >
+    <!-- If not using content wrapper, material sidenav acting up -->
+    <div class="p-3">
+      @if (isMobile()) {
+      <div class="text-right">
+        <button mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
+      }
     </div>
-    <footer class="p-4 border-t border-gray-200">
-      <button
-        class="w-full bg-indigo-600 text-white py-2 rounded-lg hover:bg-indigo-700 transition"
-      >
-        New Chat
+  </mat-sidenav>
+  <mat-sidenav-content class="!flex flex-col">
+    <mat-toolbar class="border-b border-l border-slate-200">
+      <button matIconButton class="mr-2" (click)="sidenav.toggle()">
+        <mat-icon fontSet="material-symbols-outlined">side_navigation</mat-icon>
       </button>
-    </footer>
-  </aside>
-
-  <main class="flex flex-col flex-1 overflow-y-scroll">
-    <router-outlet />
-  </main>
-</div>
+      Jahri.ai
+    </mat-toolbar>
+    <div class="flex flex-col justify-center flex-1 p-3">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
