fix: ui callback (this) dereference

--- a/ui/src/app/common/chatbox/chatbox.template.html
+++ b/ui/src/app/common/chatbox/chatbox.template.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit($event)">
   <mat-form-field class="w-full">
     <div class="items-end" [class.flex]="!sendUp()">
       <textarea
