refactor: home & chat component now worked

--- a/ui/src/app/home/home.template.html
+++ b/ui/src/app/home/home.template.html
@@ -1,4 +1,4 @@
-<div class="mx-auto flex flex-col w-full max-w-2xl">
+<div class="w-full max-w-2xl">
   <h1 class="text-2xl text-center mb-3">What's on your mind today?</h1>
   <chatbox [onSubmitCallback]="createAndNavigateToChat.bind(this)" />
 </div>
