--- a/ui/src/custom-theme.scss
+++ b/ui/src/custom-theme.scss
@@ -44,3 +44,11 @@ body {
   // Reset the user agent margin.
   margin: 0;
 }
+
+.toast-error {
+  @include mat.snack-bar-overrides((
+    button-color: var(--mat-sys-on-error),
+    supporting-text-color: var(--mat-sys-on-error),
+    container-color: var(--mat-sys-error),
+  ));
+}
