--- a/ui/src/app/app.html
+++ b/ui/src/app/app.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="h-screen">
+<mat-sidenav-container class="h-screen w-screen flex flex-col">
   <mat-sidenav
     #sidenav
     [fixedInViewport]="true"
@@ -17,15 +17,15 @@
       }
     </div>
   </mat-sidenav>
-  <mat-sidenav-content class="!flex flex-col">
-    <mat-toolbar class="border-b border-l border-slate-200">
+  <mat-sidenav-content class="!flex flex-col flex-1">
+    <mat-toolbar class="sticky top-0 border-b border-slate-300">
       <button matIconButton class="mr-2" (click)="sidenav.toggle()">
         <mat-icon fontSet="material-symbols-outlined">side_navigation</mat-icon>
       </button>
-      Jahri.ai
+      <a routerLink="/">Jahri.ai</a>
     </mat-toolbar>
-    <div class="flex flex-col justify-center flex-1 p-3">
-      <router-outlet></router-outlet>
+    <div class="flex flex-1">
+      <router-outlet />
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
