--- a/ui/src/app/chat/chat.template.html
+++ b/ui/src/app/chat/chat.template.html
@@ -1,32 +1,18 @@
-<section class="flex flex-col flex-1 border">
-  <!-- Chat Header -->
-  <header class="sticky top-0 p-4 bg-white border-b border-slate-100">
-    <div>
-      <!-- <h2 class="font-semibold text-gray-700">Conversation {{ convId }}</h2> -->
-    </div>
-  </header>
-
-  <!-- Messages -->
-  <div class="flex-1 overflow-y-auto p-4 space-y-5">
-    <!-- <div *ngFor="let msg of convo.messages()">
-      <chat-bubble [role]="msg.role" [message]="msg.content"></chat-bubble>
-    </div> -->
+<!-- Messages -->
+<div class="message-container flex flex-col flex-[1_1_0] overflow-y-auto p-3">
+  <ul class="w-full max-w-3xl mx-auto flex flex-col space-y-5">
+    @for (message of this.chat.selectedChatMessages(); track message.id) {
+    <chat-bubble [role]="message.role" [message]="message.content" />
+    } @if (this.chat.response()) {
+    <chat-bubble role="assistant" [message]="this.chat.response()!" />
+    } @if (this.chat.loading()) {
+    <chat-loader />
+    }
+  </ul>
+</div>
+<!-- Bottom Bar -->
+<div class="pt-6 px-4 border-t border-slate-300">
+  <div class="max-w-3xl w-full mx-auto">
+    <chatbox [onSubmitCallback]="send.bind(this)" />
   </div>
-
-  <!-- Bottom Bar -->
-  <footer class="sticky bottom-0 p-4 border-t border-gray-200 bg-white flex items-center gap-2">
-    <input
-      [(ngModel)]="prompt"
-      (keydown.enter)="send()"
-      type="text"
-      placeholder="Type a message..."
-      class="flex-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"
-    />
-    <button
-      (click)="send()"
-      class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition"
-    >
-      Send
-    </button>
-  </footer>
-</section>
+</div>
