--- a/ui/src/app/chat/chat.css
+++ b/ui/src/app/chat/chat.css
@@ -5,10 +5,16 @@
 .chat-bubble-user {
   background-color: var(--mat-sys-primary);
   color: var(--mat-sys-on-primary);
+  box-shadow: var(--mat-sys-level1);
 }
 
 .chat-loader span {
   background-color: var(--mat-sys-primary);
+}
+
+.scroll-down-btn {
+  background-color: var(--mat-sys-secondary-fixed);
+  color: var(--mat-sys-on-secondary-fixed);
 }
 
 
