--- a/ui/src/app/chat/chat.template.html
+++ b/ui/src/app/chat/chat.template.html
@@ -1,5 +1,8 @@
 <!-- Messages -->
-<div class="message-container flex flex-col flex-[1_1_0] overflow-y-auto p-3">
+<div
+  #messageContainer
+  class="message-container relative flex flex-col flex-[1_1_0] overflow-y-auto max-h-full p-3 pb-12"
+>
   <ul class="w-full max-w-3xl mx-auto flex flex-col space-y-5">
     @for (message of this.chat.selectedChatMessages(); track message.id) {
     <chat-bubble [role]="message.role" [message]="message.content" />
@@ -9,7 +12,18 @@
     <chat-loader />
     }
   </ul>
+
+  @if (this.scrolledUp()) {
+  <button
+    matMiniFab
+    (click)="scrollToBottom()"
+    class="scroll-down-btn !fixed z-20 bottom-32 left-1/2 !shadow-lg !rounded-full !border !border-slate-300"
+  >
+    <mat-icon>arrow_downward</mat-icon>
+  </button>
+  }
 </div>
+
 <!-- Bottom Bar -->
 <div class="pt-6 px-4 border-t border-slate-300">
   <div class="max-w-3xl w-full mx-auto">
