--- a/ui/src/app/common/chatbox/chatbox.template.html
+++ b/ui/src/app/common/chatbox/chatbox.template.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit($event)">
+<form (submit)="onSubmit($event)">
   <mat-form-field class="w-full">
     <div class="items-end" [class.flex]="!sendUp()">
       <textarea
@@ -22,6 +22,7 @@
           type="submit"
           class="transition-all duration-150"
           aria-label="Send message"
+          [disabled]="prompt.invalid || !prompt.value || isGenerating()"
         >
           <mat-icon>send</mat-icon>
         </button>
