--- a/ui/src/app/app.html
+++ b/ui/src/app/app.html
@@ -15,6 +15,7 @@
         </button>
       </div>
       }
+      <sidenav-component />
     </div>
   </mat-sidenav>
   <mat-sidenav-content class="!flex flex-col flex-1">
