ui: fix sidenav border

--- a/ui/src/app/common/sidenav/sidenav.template.html
+++ b/ui/src/app/common/sidenav/sidenav.template.html
@@ -1,9 +1,9 @@
-<div>
+<div class="p-3">
   <mat-nav-list>
     <h3 matSubheader>Navigations</h3>
 
     <mat-list-item [activated]="false">
-      <a routerLink="/" class="md-typescale-body-medium">New Chat</a>
+      <a routerLink="/" matListItemTitle>New Chat</a>
       <mat-icon matListItemIcon fontSet="material-symbols-outlined">edit</mat-icon>
     </mat-list-item>
 
@@ -12,7 +12,7 @@
     <h3 matSubheader>Chats</h3>
     @for (chat of chats$ | async; track chat.id) {
     <mat-list-item [activated]="false">
-      <a matListItemTitle href="..." class="display-large">{{ chat.title }}</a>
+      <a matListItemTitle [routerLink]="['c', chat.id]" class="display-large">{{ chat.title }}</a>
     </mat-list-item>
     } }
   </mat-nav-list>
