--- a/ui/src/app/app.html
+++ b/ui/src/app/app.html
@@ -7,9 +7,9 @@
     [mode]="isMobile() ? 'over' : 'side'"
   >
     <!-- If not using content wrapper, material sidenav acting up -->
-    <div class="p-3">
+    <div>
       @if (isMobile()) {
-      <div class="sticky top-0 flex justify-end">
+      <div class="sidenav-header sticky top-0 z-10 py-3 px-2 flex justify-end">
         <button mat-icon-button (click)="sidenav.toggle()">
           <mat-icon>close</mat-icon>
         </button>
@@ -18,7 +18,7 @@
       <sidenav-component />
     </div>
   </mat-sidenav>
-  <mat-sidenav-content class="!flex flex-col flex-1">
+  <mat-sidenav-content class="!flex flex-col flex-1 border-l border-slate-300">
     <mat-toolbar class="sticky top-0 border-b border-slate-300">
       <button matIconButton class="mr-2" (click)="sidenav.toggle()">
         <mat-icon fontSet="material-symbols-outlined">side_navigation</mat-icon>
