--- a/ui/src/app/app.html
+++ b/ui/src/app/app.html
@@ -4,6 +4,7 @@
     [fixedInViewport]="true"
     [fixedTopGap]="0"
     [fixedBottomGap]="0"
+    [opened]="isOpened()"
     [mode]="isMobile() ? 'over' : 'side'"
   >
     <!-- If not using content wrapper, material sidenav acting up -->
