ui: add markdown parsing

--- a/ui/src/app/chat/chat.template.html
+++ b/ui/src/app/chat/chat.template.html
@@ -1,13 +1,13 @@
 <!-- Messages -->
 <div
   #messageContainer
-  class="message-container relative flex flex-col flex-[1_1_0] overflow-y-auto max-h-full p-3 pb-12"
+  class="message-container relative flex flex-col flex-[1_1_0] overflow-y-auto max-h-full p-3 pb-32"
 >
   <ul class="w-full max-w-3xl mx-auto flex flex-col space-y-5">
     @for (message of messages$ | async; track message.id) {
-    <chat-bubble [role]="message.role" [message]="message.content" />
+    <message [role]="message.role" [message]="message.content" />
     } @if (response$ | async) {
-    <chat-bubble role="assistant" [message]="(response$ | async)!" />
+    <markdown [content]="(response$ | async)!" />
     } @if (thinking$ | async) {
     <chat-loader />
     }
