--- a/ui/src/app/chat/chat.template.html
+++ b/ui/src/app/chat/chat.template.html
@@ -16,7 +16,7 @@
 
 <!-- Bottom Bar -->
 <div class="relative pt-6 px-4 border-t border-slate-300">
-  @if (scrolledUp()) {
+  @if (showFab()) {
   <button
     matMiniFab
     (click)="scrollToBottom()"
