--- a/ui/src/app/chat/chat.template.html
+++ b/ui/src/app/chat/chat.template.html
@@ -11,19 +11,19 @@
     <chat-loader />
     }
   </ul>
-</div>
-
-<!-- Bottom Bar -->
-<div class="relative pt-6 px-4 border-t border-slate-300">
   @if (showFab()) {
   <button
     matMiniFab
     (click)="scrollToBottom()"
-    class="scroll-down-btn !absolute z-20 bottom-32 left-1/2 !shadow-lg !rounded-full !border !border-slate-300"
+    class="scroll-down-btn !sticky z-20 -bottom-28 left-1/2 !shadow-lg !rounded-full !border !border-slate-300"
   >
     <mat-icon>arrow_downward</mat-icon>
   </button>
   }
+</div>
+
+<!-- Bottom Bar -->
+<div class="relative pt-6 px-4 border-t border-slate-300">
   <div class="max-w-3xl w-full mx-auto">
     <chatbox [onSubmitCallback]="send.bind(this)" [isGenerating]="(generating$ | async) ?? false" />
   </div>
