--- a/ui/src/app/common/layouts/main/main.layout.template.html
+++ b/ui/src/app/common/layouts/main/main.layout.template.html
@@ -7,7 +7,7 @@
     [opened]="this.sidenavService.isOpened()"
     [mode]="this.sidenavService.isMobile() ? 'over' : 'side'"
   >
-    <sidenav-component />
+    <sidenav />
   </mat-sidenav>
   <mat-sidenav-content class="!flex flex-col flex-1 border-l border-slate-300">
     <app-toolbar />
