--- a/ui/src/app/resume/pages/edit/edit.resume.template.html
+++ b/ui/src/app/resume/pages/edit/edit.resume.template.html
@@ -1,13 +1,20 @@
-<div class="grid grid-cols-2 flex-[1_0_0] min-h-0">
+<div #container class="flex flex-[1_0_0] min-h-0">
   <!-- Left column -->
-  <div class="preview-container overflow-y-auto p-3">
+  <div class="hidden md:flex flex-1 preview-container overflow-y-auto p-3">
     <div class="preview bg-white h-full aspect-[1/1.414] mx-auto"></div>
   </div>
 
-  <!-- Right column -->
-  <div class="overflow-y-auto p-5 border-l border-slate-300 space-y-5">
-    <div class="bg-red-400 h-96"></div>
-    <div class="bg-red-400 h-96"></div>
-    <div class="bg-red-400 h-96"></div>
-  </div>
+  <resizable-panel
+    position="right"
+    [defaultWidth]="width() / 2"
+    [minWidth]="width() / 4"
+    [parentWidth]="width()"
+    class="relative border-l border-slate-300"
+  >
+    <div [style.min-width.px]="width() / 2.5" class="p-5 space-y-5">
+      <div class="bg-red-400 h-96"></div>
+      <div class="bg-red-400 h-96"></div>
+      <div class="bg-red-400 h-96"></div>
+    </div>
+  </resizable-panel>
 </div>
