ui: prototype form group

--- a/ui/src/app/resume/edit/edit.resume.template.html
+++ b/ui/src/app/resume/edit/edit.resume.template.html
@@ -14,6 +14,7 @@
       <div class="bg-red-400 h-96"></div>
       <div class="bg-red-400 h-96"></div>
       <div class="bg-red-400 h-96"></div>
+      <resume-form />
     </div>
   </resizable-panel>
 </div>
