ui: finished profile section form

--- a/ui/src/app/common/components/editor/editor.template.html
+++ b/ui/src/app/common/components/editor/editor.template.html
@@ -2,7 +2,7 @@
   [modules]="modules"
   theme="snow"
   placeholder="Start writing content here..."
-  class="w-full h-full"
+  class="w-full h-full rounded-md overflow-hidden border border-slate-300"
   [formControl]="control()"
   [bounds]="'self'"
   [styles]="{ height: '150px' }"
