--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -27,3 +27,10 @@ pre {
 
 
 
+/* editor style has to be global */
+quill-editor.ng-invalid {
+  border: 1px solid var(--mat-sys-error) !important;
+}
+
+
+
