--- a/ui/src/app/common/layouts/main/main.layout.template.html
+++ b/ui/src/app/common/layouts/main/main.layout.template.html
@@ -1,18 +1,6 @@
-<mat-sidenav-container class="h-screen w-screen flex flex-col">
-  <mat-sidenav
-    #sidenav
-    [fixedInViewport]="true"
-    [fixedTopGap]="0"
-    [fixedBottomGap]="0"
-    [opened]="this.sidenavService.isOpened()"
-    [mode]="this.sidenavService.isMobile() ? 'over' : 'side'"
-  >
-    <sidenav />
-  </mat-sidenav>
-  <mat-sidenav-content class="!flex flex-col flex-1 border-l border-slate-300">
-    <app-toolbar />
-    <div class="flex flex-1">
-      <router-outlet />
-    </div>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<root-layout>
+  <app-toolbar />
+  <div class="flex flex-1">
+    <router-outlet />
+  </div>
+</root-layout>
