--- a/ui/src/app/resume/form/date/date.form.template.html
+++ b/ui/src/app/resume/form/date/date.form.template.html
@@ -1,9 +1,28 @@
-<form [formGroup]="form()">
-  <mat-form-field class="w-full">
-    <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker" />
-    <mat-hint>MM/DD/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
+<form [formGroup]="form()" class="grid grid-cols-2">
+  <mat-form-field>
+    <mat-label>Date Format</mat-label>
+    <mat-select [formControl]="$any(format)" (valueChange)="onChange($event)">
+      @for (format of format_list; track $index) {
+      <mat-option [value]="format">{{ format }}</mat-option>
+      }
+    </mat-select>
   </mat-form-field>
+  <!-- <mat-checkbox [formControl]="$any(ranged)">Range</mat-checkbox> -->
+
+  @if (ranged?.value) {
+  <mat-form-field class="col-span-2">
+    <mat-label>Enter a date range</mat-label>
+    <mat-date-range-input [rangePicker]="picker">
+      <input matStartDate [formControl]="$any(start)" placeholder="Start date" />
+      <input matEndDate [formControl]="$any(end)" placeholder="End date" />
+    </mat-date-range-input>
+    <mat-hint>{{ format?.value }} - {{ format?.value }}</mat-hint>
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-date-range-picker startView="multi-year" #picker></mat-date-range-picker>
+  </mat-form-field>
+  }
 </form>
+
+<div>
+  <div>{{ start?.value }}</div>
+</div>
