--- a/ui/src/app/resume/form/title-input/title-input.form.template.html
+++ b/ui/src/app/resume/form/title-input/title-input.form.template.html
@@ -2,6 +2,7 @@
   [formControl]="control()"
   [placeholder]="placeholder()"
   (keydown)="$event.stopPropagation()"
+  (keydown.enter)="onEnter($event)"
   (keyup)="$event.stopPropagation()"
   (click)="$event.stopPropagation()"
   class="w-full placeholder:text-slate-400 outline-0"
