ui:make add sections scroll into view

--- a/ui/src/app/resume/form/root/root.form.template.html
+++ b/ui/src/app/resume/form/root/root.form.template.html
@@ -6,7 +6,7 @@
     <profile-form [form]="service.profile" />
   </mat-expansion-panel>
   @for (section of this.service.sections.controls; track $index) {
-  <mat-expansion-panel>
+  <mat-expansion-panel #sections>
     <mat-expansion-panel-header>
       <mat-panel-title>
         <title-input-form
