ui: add section button

--- a/ui/src/app/resume/form/root/root.form.template.html
+++ b/ui/src/app/resume/form/root/root.form.template.html
@@ -1,3 +1,7 @@
+<div class="flex justify-end mb-3">
+  <button matButton="tonal" (click)="addSection()"><mat-icon>add</mat-icon> Add Section</button>
+</div>
+
 <mat-accordion [multi]="false">
   <mat-expansion-panel>
     <mat-expansion-panel-header>
