ui:fix date format and scrolling issues

--- a/ui/src/app/resume/form/date/date.form.template.html
+++ b/ui/src/app/resume/form/date/date.form.template.html
@@ -3,7 +3,7 @@
     <mat-expansion-panel-header>
       <mat-panel-title> Expand Date Settings </mat-panel-title>
     </mat-expansion-panel-header>
-    <div>
+    <div class="relative">
       <mat-form-field class="w-full">
         <mat-label>Date Format</mat-label>
         <mat-select formControlName="format" (valueChange)="onFormatChange($event)">
